# image-tracker

./: .brooks-lint-history.json  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  RUNNING.md
.claude/: settings.json
.claude/agents/: rust-ddd-reviewer.md
.claude/hooks/: post-commit-review.sh
.github/workflows/: ci.yml  release.yml
assets/: image-tracker.desktop
crates/tracker-app/: Cargo.toml  x.json  x.reps.json
crates/tracker-app/src/: app.rs  cli.rs  compare.rs  decode_worker.rs  export_job.rs  ffmpeg_sink.rs  ffmpeg_source.rs  ffprobe.rs  frame_cache.rs  grade.rs  lib.rs  main.rs  overlay_export.rs  screen_map.rs  seek_source.rs  telemetry.rs  thumbnail_strip.rs  thumbnail_worker.rs  tracking.rs
crates/tracker-app/src/app/: banner.rs  bottom_bar.rs  mod.rs  palette.rs  settings_section.rs  side_panel.rs  state.rs  theme.rs  thumbnail_panel.rs  toolbar.rs  video_panel.rs
crates/tracker-app/src/app/results/: education.rs  mod.rs  rep_table.rs  velocity_chart.rs
crates/tracker-app/src/app/state/: jobs.rs  mod.rs  review.rs  session.rs  test_support.rs
crates/tracker-app/tests/: export_json_validity.rs
crates/tracker-core/: Cargo.toml
docs/: architecture.md  code-map.md  e2e-results.md  gui-threading.md  theory.md  understanding.md
groundtruth/: README.md  extract_frames.sh  frames_index.json  label.html  serve.py  v1.csv  v2.csv  v3.csv  v4.csv
scripts/: check-file-sizes.sh  smoke-report.sh
test_videos/: WhatsApp Video 2026-07-08 at 22.56.32.json  WhatsApp Video 2026-07-08 at 22.56.32.overlay.json
(+35 files in other folders)
