[package]
name = "tracker-app"
version = "0.5.0"
edition = "2021"

[dependencies]
tracker-core = { path = "../tracker-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = "0.29"
egui = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
directories = "5"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
image = { version = "0.25", default-features = false, features = ["png"] }
